# dbhelper

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  dbhelper.example.toml
crates/dbhelper-cli/: Cargo.toml
crates/dbhelper-cli/src/: main.rs
crates/dbhelper-container/: Cargo.toml
crates/dbhelper-container/src/: lib.rs
crates/dbhelper-core/: Cargo.toml
crates/dbhelper-core/src/: error.rs  lib.rs
crates/dbhelper-core/src/config/: mod.rs
crates/dbhelper-core/src/diff/: mod.rs
crates/dbhelper-core/src/lint/: mod.rs
crates/dbhelper-core/src/migrate/: mod.rs
crates/dbhelper-core/src/optimize/: mod.rs
crates/dbhelper-core/src/parser/: mod.rs
crates/dbhelper-core/src/schema/: mod.rs
crates/dbhelper-mysql/: Cargo.toml
crates/dbhelper-mysql/src/: lib.rs
crates/dbhelper-postgres/: Cargo.toml
crates/dbhelper-postgres/src/: lib.rs
integrations/drizzle/: drizzle.config.ts  package.json
integrations/drizzle/src/schema/: mysql.ts  postgres.ts
integrations/sqlalchemy/: alembic.ini  pyproject.toml
integrations/sqlalchemy/alembic/: env.py
integrations/sqlalchemy/models/: __init__.py  mysql.py  postgres.py
