[workspace]
members = [
    "crates/dbhelper-core",
    "crates/dbhelper-postgres",
    "crates/dbhelper-mysql",
    "crates/dbhelper-container",
    "crates/dbhelper-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls"] }
thiserror = "2"
